Fix compatibilità con Firefox

--- a/src/client/app/video/video-box/video-box.component.scss
+++ b/src/client/app/video/video-box/video-box.component.scss
@@ -1,5 +1,5 @@
 video {
-    position: absolute;
+    position: relative;
     left: 0;
     top: 0;
     width: 100%;
